ステージングのレイアウトを作成。
・ステージングエリアのレイアウトクラスを作成。
・テストをvitestからjestに変更。
・repositoryなどのvcs機能クラスの内部を変更。
・それぞれのファイルにドキュメントを作成。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "module": "ESNext",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
-    "types": ["vitest/globals"],
+    "types": ["node", "jest"],
+    "esModuleInterop": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
