--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "vcs-visual-tutorial",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
-    "test": "vitest",
+    "test": "jest",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.8",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.8",
     "typescript": "^5.2.2",
     "vite": "^5.1.6"
   }
