--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "devDependencies": {
     "@types/jest": "^28.1.8",
+    "@types/jsdom": "^21.1.6",
     "jest": "^28.1.3",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.0.0",
     "ts-jest": "^28.0.8",
     "typescript": "^5.2.2",
     "vite": "^5.1.6"
