--- a/package.json
+++ b/package.json
@@ -4,18 +4,17 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "test": "jest",
+    "test": "vitest",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "type": "module",
   "devDependencies": {
-    "@types/jest": "^28.1.8",
     "@types/jsdom": "^21.1.6",
-    "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^24.0.0",
-    "ts-jest": "^28.0.8",
     "typescript": "^5.2.2",
-    "vite": "^7.0.6"
+    "vite": "^7.0.6",
+    "vitest": "^3.2.4"
   }
 }
